# try-rust-python

./: .gitignore  MakeFile  Makefile  README.md  pyproject.toml
python/: fibonacci.py
rust/: Cargo.toml  MakeFile  Makefile  pyproject.toml
rust/fibonacci/: Cargo.toml  pyproject.toml
rust/fibonacci/src/: lib.rs
rust/src/: lib.rs
tests/: test_fibonacci.py
